Synchronize with trunk up to r132926